syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message ChallengeBossSingleNodeInfo {
	uint32 stage_score = 11;
	uint32 buff_id = 12;
	bool HGIDJHFNCMA = 9;
	bool is_win = 4;
}

