syntax = "proto3";              
//Fenni

option java_package = "emu.lunarcore.proto";

import "RogueBuffData.proto";
import "RogueMiracleData.proto";
import "RogueVirtualItemData.proto";

message RogueActionResultData {
	oneof result_action {
		RogueVirtualItemData add_item_list = 6;
		RogueVirtualItemData remove_item_list = 11;
		RogueBuffData add_buff_list = 1069;
		RogueBuffData remove_buff_list = 692;
		RogueMiracleData add_miracle_list = 580;
	}
}